cor no thead da tabela comparativa

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -186,7 +186,7 @@ input[type="radio"] {
     font-size: 14px;
 }
 
-.daily-table thead {
+.daily-table thead, .comparative thead {
     position: sticky; 
     top: 0; 
     z-index: 1;
